--- a/index.html
+++ b/index.html
@@ -127,14 +127,18 @@
        .item-break-down,
        .total-price {
         width: 100% !important;
-        max-width: 400px !important;
+        max-width: 600px !important;
         display: block;
        }
-       .item-break-down .info-column,
-       .total-price .info-column{
-        width: 400px !important;
-        padding-left: 50px !important;
+       .item-break-down .info-column{
+        width: 600px !important;
+        padding-left: 20px !important;
         padding-right: 50px !important;
+       }
+       .total-price .info-column {
+        width: 600px !important;
+        padding-left: 50px !important;
+        padding-right: 20px !important;
        }
        /* Order Status */
        .help-center-wrapper {
@@ -483,7 +487,7 @@
                                              <table class="total-price" role="presentation" width="100%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" width="100px" style="width: 100px;">
                                                 <tr>
                                                     <td class="info-column" align="center" valign="top" style="padding: 40px 20px 0 0;">
-                                                        <h4 style="color: #000000; font-size: 18px; line-height: 24px; text-align: right; margin: 0;">$59.00</h4>
+                                                        <h4 style="color: #000000; font-size: 16px; line-height: 24px; text-align: right; margin: 0; font-weight: 800;">$59.00</h4>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -503,7 +507,7 @@
                                         <td align="center" valign="top" style="padding: 40px 0 0 0;">
                                            <table class="order-summary" role="presentation" width="80%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 80%; max-width: 100%;">
                                                 <tr>
-                                                    <td align="center" valign="top" style="padding: 0; padding-left: 220px;">
+                                                    <td class="info-column" align="center" valign="top" style="padding: 0; padding-left: 220px;">
                                                         <p style="color: #000000; font-size: 16px; line-height: 22px; text-align: left; margin: 0; font-weight: 600;">
                                                             Subtotal<br>
                                                             Shipping<br>
@@ -513,10 +517,10 @@
 
                                                     </td>
                                                 </tr>
-                                           </table>
+                                           </table>`
                                            <table class="order-cost" role="presentation" width="20%" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 20%; max-width: 100%;">
                                             <tr>
-                                                <td align="center" valign="top" style="padding: 0; padding-right: 20px;">
+                                                <td class="info-column" align="center" valign="top" style="padding: 0; padding-right: 20px;">
                                                     <p style="color: #000000; font-size: 16px; line-height: 22px; margin: 0; font-weight: 600; text-align: right;">
                                                         $59.00 <br>
                                                         $0.00 <br>
