Update mobile responsive

--- a/index.html
+++ b/index.html
@@ -150,7 +150,26 @@
         line-height: 30px !important;
        }
        .learn-more-wrapper {
-
+       }
+       /* Order Summary */
+       .order-summary, .order-cost {
+        width: 50% !important;
+       }
+       .order-summary .info-column {
+        padding-left: 20px !important;
+       }
+       /* Order Status */
+       .order-status {
+        padding-top: 30px !important;
+       }
+       /* Learn More */
+       .learn-more {
+        padding-right: 20px !important;
+        padding-left: 20px !important;
+       }
+       .learn-more .column {
+        width: 100% !important;
+        display: block !important;
        }
     }
 </style>
@@ -278,7 +297,7 @@
                                                                         <tr>
                                                                             <td align="center" valign="top" style="padding: 0;">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: bold; margin: 0;">Order Number</p>
-                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: normal; margin: 0;">
+                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     <span>US65005000</span>
                                                                                 </p>
                                                                             </td>
@@ -331,7 +350,7 @@
                                                                         <tr>
                                                                             <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: bold; margin: 0;">Order Date</p>
-                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: normal; margin: 0;">
+                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     <span>May 12, 2020</span>
                                                                                 </p>
                                                                             </td>
@@ -385,7 +404,7 @@
                                                                             <td align="center" valign="top" style="padding: 0">
                                                                                 <p style="color: #333333; font-size: 15px;line-height: 22px; text-align: left; font-weight: bold; margin: 0;">
                                                                                     Shipping Method</p>
-                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: normal; margin: 0;">
+                                                                                <p style="color: #EF4923; font-size: 15px;line-height: 22px; text-align: left; font-weight: 600; margin: 0;">
                                                                                     <span>Ground</span>
                                                                                 </p>
                                                                             </td>
@@ -517,7 +536,7 @@
 
                                                     </td>
                                                 </tr>
-                                           </table>`
+                                           </table>
                                            <table class="order-cost" role="presentation" width="20%" align="right" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="width: 20%; max-width: 100%;">
                                             <tr>
                                                 <td class="info-column" align="center" valign="top" style="padding: 0; padding-right: 20px;">
@@ -540,7 +559,7 @@
 
                         <!-- ==========>> Start of Order Status Button <<==========  -->
                         <tr>
-                            <td align="center" valign="top" style="padding: 40px 0 60px 0;">
+                            <td class="order-status" align="center" valign="top" style="padding: 40px 0 60px 0;">
                                 <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td align="center" valign="top" style="padding: 0;">
@@ -596,7 +615,7 @@
 
                         <!-- ==========>> Start of Learn More Table <<==========  -->
                         <tr>
-                            <td class="learn-more-wrapper" align="center" valign="top" style="padding: 40px 0 80px 0; ">
+                            <td class="learn-more" align="center" valign="top" style="padding: 40px 0 80px 0; ">
                                 <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="background-color: #F5F5F5;">
                                     <tr>
                                         <td class="padding" align="center" valign="top" style="padding: 20px 0 20px 0">
@@ -618,7 +637,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                <td align="center" valign="top" style="padding: 10px 0 20px 0">
                                                                     <a href="#" style="text-decoration: none;">
                                                                         <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
                                                                             Learn More
@@ -646,7 +665,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                <td align="center" valign="top" style="padding: 10px 0 20px 0">
                                                                     <a href="#" style="text-decoration: none;">
                                                                         <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
                                                                             Learn More
@@ -675,7 +694,7 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td align="center" valign="top" style="padding: 10px 0 10px 0">
+                                                                <td align="center" valign="top" style="padding: 10px 0 20px 0">
                                                                     <a href="#" style="text-decoration: none;">
                                                                         <p style="color: #EF4923; font-size: 16px; line-height: 26px; text-align: center; margin: 0; font-weight: 800;">
                                                                             Learn More
