Update image hosting

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     <tr>
                                         <td align="center" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;" valign="top">
                                             <a href="#" style="text-decoration: none;">
-                                                <img src="img/patagonia-logo.jpeg" alt="Patagonia Logo" style="width: 230px;">
+                                                <img src="https://github.com/TNguyen20194/Patagonia-Transactional-Email/blob/main/img/patagonia-logo.jpeg?raw=true" alt="Patagonia Logo" style="width: 230px;">
                                             </a>
                                         </td>
                                     </tr>
@@ -253,7 +253,7 @@
                                     <tr>
                                         <td align="center" valign="top" style="padding: 0; width: 100%; max-width: 600px; font-size: 0;">
                                             <a href="#" style="text-decoration: none;">
-                                                <img src="img/hero-image.jpeg" alt="Hero Image" style="width: 600px;">
+                                                <img src="https://github.com/TNguyen20194/Patagonia-Transactional-Email/blob/main/img/hero-image.jpeg?raw=true" alt="Hero Image" style="width: 600px;">
                                             </a>
                                         </td>
                                     </tr>
@@ -529,7 +529,7 @@
                                             <table class="image-column" role="presentation" width="100%" align="left" border="0" border-spacing="0" cellpadding="0" cellspacing="0" width="220px" style="width: 220px;">
                                                 <tr>
                                                     <td  align="center" valign="top" style="padding: 0; font-size: 0;">
-                                                        <img class="item-image" src="img/patagonia-product_shorts.jpeg" alt="Shorts" style="width: 100%;max-width: 100%; height: auto;">
+                                                        <img class="item-image" src="https://github.com/TNguyen20194/Patagonia-Transactional-Email/blob/main/img/patagonia-product_shorts.jpeg?raw=true" alt="M's Baggies™ Naturals Shorts" style="width: 100%;max-width: 100%; height: auto;">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -809,7 +809,7 @@
                                     <tr>
                                         <td align="center" valign="top" style="padding: 20px 10px 60px 10px; font-size: 0; background-color: #ffffff; width: 100%;" width="100%">
                                             <a href="#" style="text-decoration: none;">
-                                                <img src="img/patagonia-footer_media.png" alt="Take Action" style="width: 300px; height: 26px;">
+                                                <img src="https://github.com/TNguyen20194/Patagonia-Transactional-Email/blob/main/img/patagonia-footer_media.png?raw=true" alt="Take Action" style="width: 300px; height: 26px;">
                                             </a>
                                         </td>
                                     </tr>
