--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     <tr>
                                         <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
                                             <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 500;">
-                                                Your order is being processed. As soon as iit ships, we'll send you a shipping confirmation email with tracking information.
+                                                Your order is being processed. As soon as it ships, we'll send you a shipping confirmation email with tracking information.
                                             </p>
                                         </td>
                                     </tr>
