--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
     @media only screen and (max-width: 490px){
        .container {
-           width: 320px !important;
+            max-width: 100% !important;
+            width: 320px !important;
        }
        /* Thank you for shopping */
        .thank-you__header {
