--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
     @media only screen and (max-width: 490px){
        .container {
-            max-width: 100% !important;
-            width: 320px !important;
+        width: 100% !important;
+        max-width: 100% !important;
        }
        /* Thank you for shopping */
        .thank-you__header {
