--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
        }
        .learn-more .column {
         width: 100% !important;
-        display: block !important;
+        display: inline-block !important;
        }
        /* Footer */
        .help-center {
